Update export feature integrating on frontend